TAO-1239 fix: preview now visible in authoring

--- a/views/scss/qti/_upload.scss
+++ b/views/scss/qti/_upload.scss
@@ -39,6 +39,9 @@
 
         &.visible-file-upload-preview {
             display: block;
+        }
+
+        &.runtime-visible-file-upload-preview {
             min-width: unset;
             min-height: unset;
             height: auto;
